Add release badge

--- a/README.yaml
+++ b/README.yaml
@@ -21,6 +21,9 @@ badges:
   - name: "Build Status"
     image: "https://travis-ci.org/cloudposse/terraform-aws-kops-ecr.svg?branch=master"
     url: "https://travis-ci.org/cloudposse/terraform-aws-kops-ecr"
+  - name: "Latest Release"
+    image: "https://img.shields.io/github/release/cloudposse/terraform-aws-kops-ecr.svg"
+    url: "https://github.com/cloudposse/terraform-aws-kops-ecr/releases/latest"
   - name: "Slack Community"
     image: "https://slack.cloudposse.com/badge.svg"
     url: "https://slack.cloudposse.com"
